# *****************************************************************************
# Filename:			Makefile.am
# Description:
# Copyright(c):
# Author(s):		Jay Cotton, Claude Sylvain
# Created:			26 Mars 2011
# Last modified:	17 April 2011
# Notes:
# *****************************************************************************


#AUTOMAKE_OPTOINS = foreign

SUBDIRS = src


