# *****************************************************************************
# Filename:			configure.ac
# Description:
# Copyright(c):
# Author(s):		Jay Cotton, Claude Sylvain
# Created:			26 Mars 2011
# Last modified:	4 December 2011
#
# Notes:				- Process this file with autoconf to produce a configure
#						  script.
# *****************************************************************************


#AC_PREREQ(2.60)

#AC_INIT(asm8080, 2.0 , lbmgmusic@gmail.com)
#AC_INIT(asm8080)
AC_INIT(src)

#AC_CONFIG_SRCDIR([asm_dir.c], [exp_parser.c], [main.c], [opcode.c], [util.c])
#AC_CONFIG_HEADER([_dummy.h asm_dir.h err_code.h exp_parser.h main.h opcode.h project.h util.h war_code.h])

#AM_INIT_AUTOMAKE(asm8080, main)
AM_INIT_AUTOMAKE(asm8080, 0.9.2)

# Checks for programs.
# --------------------
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

#AM_PROG_CC_C_O

# Checks for libraries.
#
AM_PROG_LIBTOOL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])

#AC_OUTPUT(app/Makefile)
#AC_OUTPUT(src/Makefile Makefile)
AC_OUTPUT







