# *****************************************************************************
# Filename:			configure.ac
# Description:
# Copyright(c):
# Author(s):		Jay Cotton, Claude Sylvain
# Created:			26 Mars 2011
# Last modified:	17 April 2011
#
# Notes:	- Process this file with autoconf to produce a configure
#						  script.
# *****************************************************************************


AC_INIT(src)

AM_INIT_AUTOMAKE(asm8080, 0.9.2)

# Checks for programs.
# --------------------
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
#
#AM_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT



